tests/struct/untyped_fields.rz
struct Foo {
    a // error: missing structure field's type
}
